--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 __pycache__/
+
+Statistics/__pycache__/
+
 Linear-Regression/LeastSquare/__pycache__/
 Linear-Regression/GradientDescent/__pycache__/
