added dataset and testcode

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Statistics/__pycache__/
 
 Linear-Regression/LeastSquare/__pycache__/
 Linear-Regression/GradientDescent/__pycache__/
+
+Multiple-Linear-Regression/__pycache__/
